--- a/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
+++ b/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
@@ -115,6 +115,8 @@
                 android:layout_marginTop="@dimen/_10sdp"
                 app:cardCornerRadius="@dimen/_8sdp"
                 app:cardElevation="@dimen/_1sdp"
+                app:cardUseCompatPadding="true"
+                app:cardPreventCornerOverlap="false"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
