--- a/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
+++ b/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
@@ -108,70 +108,16 @@
                 android:text="@string/enter_card_title" />
 
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_layout"
+            <com.example.tap_payment_task.utils.customviews.CustomCardForm
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                app:cardCornerRadius="@dimen/_8sdp"
-                app:cardElevation="@dimen/_1sdp"
-                app:cardUseCompatPadding="true"
-                app:cardPreventCornerOverlap="false"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_10sdp"
-                    android:weightSum="3">
-
-                    <EditText
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.3"
-                        android:background="@null"
-                        android:drawableStart="@drawable/credit_card"
-                        android:drawablePadding="@dimen/_3sdp"
-                        android:layout_marginEnd="@dimen/_5sdp"
-                        android:hint="@string/card_number_title"
-                        android:inputType="number"
-                        android:maxLength="14"
-                        android:textSize="@dimen/_12ssp" />
-
-                    <EditText
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.7"
-                        android:background="@null"
-                        android:gravity="end"
-                        android:id="@+id/ed_expiry"
-                        android:hint="@string/mm_yy_title"
-                        android:inputType="number"
-                        android:digits="123456789/"
-                        android:maxLength="5"
-                        android:textSize="@dimen/_12ssp" />
-
-                    <EditText
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@null"
-                        android:drawableEnd="@drawable/scan_icon"
-                        android:gravity="center"
-                        android:hint="@string/cvv_title"
-                        android:inputType="number"
-                        android:maxEms="3"
-                        android:maxLength="3"
-                        android:textSize="@dimen/_12ssp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_gravity="center_horizontal">
 
                 <TextView
@@ -193,7 +139,7 @@
                 android:layout_width="match_parent"
                 android:alpha="0.3"
                 android:backgroundTint="@color/gray"
-                android:text="Pay KD 10000" />
+                tools:text="Pay KD 10000" />
 
             <TextView
                 android:layout_width="wrap_content"
