--- a/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
+++ b/app/src/main/res/layout/tap_payment_bottom_sheet_content.xml
@@ -2,13 +2,24 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="@dimen/_80sdp"
+            android:layout_height="@dimen/_3sdp"
+            android:id="@+id/starter_view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:background="@color/gray"
+            android:alpha="0.3"
+            />
 
         <ImageView
             android:id="@+id/iv_icon"
@@ -17,7 +28,7 @@
             android:layout_margin="@dimen/_10sdp"
             android:src="@drawable/tap_payment_logo"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/starter_view" />
 
         <TextView
             android:id="@+id/tv_payment_for"
@@ -27,7 +38,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:text="@string/title_"
             app:layout_constraintStart_toEndOf="@id/iv_icon"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/starter_view" />
 
         <ImageView
             android:id="@+id/iv_close_dialog"
@@ -36,9 +47,9 @@
             android:layout_marginEnd="@dimen/_10sdp"
             android:padding="@dimen/_2sdp"
             android:src="@drawable/baseline_close_24"
-            app:layout_constraintBottom_toBottomOf="@id/view"
+            app:layout_constraintBottom_toBottomOf="@id/tv_payment_for"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/tv_payment_for" />
 
         <View
             android:id="@+id/view"
@@ -59,13 +70,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/tv_amount_linear"
             android:weightSum="2"
-            android:layout_marginTop="@dimen/_10sdp">
+            android:layout_marginTop="@dimen/_5sdp">
         <TextView
             android:id="@+id/tv_amount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_10sdp"
-            android:textColor="@color/gray"
+            android:textColor="@color/dark_gray"
             android:textSize="@dimen/_22ssp"
             android:layout_weight="1.8"
             app:layout_constraintStart_toStartOf="parent"
@@ -83,6 +94,7 @@
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:background="@drawable/button_shape_rounded_gray"
                 android:paddingVertical="@dimen/_3sdp"
+                android:paddingEnd="@dimen/_10sdp"
 
                 app:drawableEndCompat="@drawable/down_arrow" />
         </LinearLayout>
@@ -175,6 +187,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/dark_gray"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="@dimen/_15sdp"
                 android:text="@string/powered_by_title" />
