--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#818181</color>
+    <color name="dark_gray">#575554</color>
+
     <color name="green">#27ce00</color>
     <color name="white_gray">#f4f4f4</color>
     <color name="blue_color">#007afe</color>
